# guile-fluidsynth

./: .gitignore  COPYING.v2  INSTALL  LICENSE  Makefile.am  NEWS  README  autogen.sh  configure.ac  f-synth-dev.scm  f-synth.scm  pre-inst-env.in
am/: guile.mk
doc/: Makefile.am  cr-f-synth-synth.texi  cr-f-synth.texi  cr-overview.texi  cr-support.texi  cr.texi  guile-fluidsynth.texi  indices.texi  introduction.texi  preface.texi  using-guile-fluidsynth.texi  variables.texi
doc/css/: manual.css
f-synth/: Makefile.am  defaults.scm  ffi.scm  support.scm  synth.scm
f-synth/ffi/: Makefile  Makefile.am  audio.ffi  audio.scm  settings.ffi  settings.scm  sfont.ffi  sfont.scm  synth.ffi  synth.scm  types.ffi  types.scm
f-synth/support/: g-export.scm  goops.scm  module.scm  stow.scm  utils.scm
m4/: guile-ext.m4  guile.m4  makeinfo.m4
meta/: guile-fluidsynth-1.0.pc.in
test-suite/: Makefile.am
test-suite/tests/: f-synth.scm
